<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_settings">Settings</string>

    <string name="app_textview_example">TextView 组件示例</string>
    <string name="app_edittextview_example">EditTextView 组件示例</string>
    <string name="app_example_textview_desc">本示例将演示 TextView,EditText,AutoCompleteTextView,\nMultiCompleteTextView
        等文本输入控件
    </string>
    <string name="app_linearlayout_example">Android布局 ---- 线性布局示例</string>
    <string name="app_tablelayout_example">Android布局 ---- 表格布局示例</string>
    <string name="app_linearlayout_complex_example">Android布局 ---- 线性复杂布局示例</string>
    <string name="app_linear_table_layout_complex_example">Android布局 ---- 线性表格组合复杂布局示例</string>
    <string name="app_relative_layout_example">Android布局 ---- 相对布局示例</string>
    <string name="app_relative_layout_complex_example">Android布局 ---- 相对布局仿TabHost示例</string>
    <string name="taskContent_str">我计划在这个月内对 Android UI及基本功能掌握</string>
    <string name="accountsContent_str">我的帐号：34042122@qq.com</string>
    <string name="sendedContent_str">今天的邮件已发送到 chengminwei_1984122@126.com</string>
    <string name="app_handler_example">Android Handler ---- 定时移动圆</string>
    <string name="app_handlerthread_example">Android HandlerThread ---- 实现异步下载</string>

    <!-- 菜单 -->
    <string name="menu_file">文件</string>
    <string name="menu_edit">编辑</string>
    <string name="menu_code">代码</string>
    <string name="menu_build">建立</string>
    <string name="menu_about">关于</string>
    <string name="menu_settings">设置</string>
    <string name="menu_quit">退出</string>
    <!--基础信息-->
    <string name="app_name">布局管理</string>
    <string name="loginName">登录名</string>
    <string name="password">密码</string>
    <string name="btnSubmit">登录</string>
    <string name="city_select">请选择城市</string>
    <string name="searchText">搜索</string>
    <!--布局-->
    <string name="LayoutFrame">单帧布局</string>
    <string name="LayoutLinear">线性布局</string>
    <string name="LayoutAbsolute">绝对布局</string>
    <string name="LayoutRelative">相对布局</string>
    <string name="LayoutTable">表格布局</string>
    <string name="LayoutGrid">网格布局</string>
    <!--控件-->
    <string name="ControlText">文本控件</string>
    <string name="ControlButton">按钮控件</string>
    <string name="ControlImageView">图片控件</string>
    <string name="ControlDateTime">时间控件</string>
    <string name="local_service_started">本地测试服务启动</string>
    <string name="local_service_stopped">本地测试服务停止</string>
    <string name="local_service_label">本地测试服务</string>
    <string name="local_service_connected">本地测试服务连接</string>
    <string name="local_service_disconnected">本地测试服务断开</string>
</resources>
