<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:scrollbars="vertical">
    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                  android:orientation="vertical">
        <LinearLayout android:layout_width="fill_parent" android:layout_height="40dp"
                      android:orientation="horizontal"
                      android:layout_marginTop="2dp"
                      android:layout_marginBottom="2dp">
            <Button
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:textAlignment="center"
                    android:text="@string/LayoutFrame"
                    android:id="@+id/btn_lay_frame"/>
            <Button android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:textAlignment="center"
                    android:text="@string/LayoutLinear"
                    android:id="@+id/btn_lay_linear"/>
            <Button android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:textAlignment="center"
                    android:text="@string/LayoutAbsolute"
                    android:id="@+id/btn_lay_absolue"/>
        </LinearLayout>
        <LinearLayout android:layout_width="fill_parent" android:layout_height="40dp"
                      android:orientation="horizontal"
                      android:layout_marginTop="2dp"
                      android:layout_marginBottom="2dp">
            <Button android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:textAlignment="center"
                    android:text="@string/LayoutRelative"
                    android:id="@+id/btn_lay_relative"/>
            <Button android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:textAlignment="center"
                    android:text="@string/LayoutTable"
                    android:id="@+id/btn_lay_table"/>
            <Button android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:textAlignment="center"
                    android:text="@string/LayoutGrid"
                    android:id="@+id/btn_lay_grid"/>
        </LinearLayout>
        <LinearLayout android:layout_width="fill_parent" android:layout_height="40dp"
                      android:orientation="horizontal"
                      android:layout_marginTop="2dp"
                      android:layout_marginBottom="2dp">
            <Button android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:textAlignment="center"
                    android:text="@string/ControlText"
                    android:id="@+id/btn_ctl_text"/>
            <Button android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:textAlignment="center"
                    android:text="@string/ControlButton"
                    android:id="@+id/btn_ctl_button"/>
            <Button android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:textAlignment="center"
                    android:text="@string/ControlImageView"
                    android:id="@+id/btn_ctl_imageView"/>
        </LinearLayout>
        <LinearLayout android:layout_width="fill_parent" android:layout_height="40dp"
                      android:orientation="horizontal"
                      android:layout_marginTop="2dp"
                      android:layout_marginBottom="2dp">
            <Button android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:textAlignment="center"
                    android:text="@string/ControlDateTime"
                    android:id="@+id/btn_ctl_dateTime"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="WebView"
                    android:id="@+id/btn_ctl_webView"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Spinner"
                    android:id="@+id/btn_ctl_spinner"/>
        </LinearLayout>
        <LinearLayout android:layout_width="fill_parent" android:layout_height="40dp"
                      android:orientation="horizontal"
                      android:layout_marginTop="2dp"
                      android:layout_marginBottom="2dp">
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ListView"
                    android:id="@+id/btn_ctl_listView"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="GridView"
                    android:id="@+id/btn_ctl_gridView"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="九宫格"
                    android:id="@+id/btn_ctl_suDoku"/>
        </LinearLayout>
        <LinearLayout android:layout_width="fill_parent" android:layout_height="40dp"
                      android:orientation="horizontal"
                      android:layout_marginTop="2dp"
                      android:layout_marginBottom="2dp">
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Gallery"
                    android:id="@+id/btn_ctl_gallery"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Http处理"
                    android:id="@+id/btn_ctl_http"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
