<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginName"
            />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtUserName"
            android:textAlignment="textStart"
            android:text="哈哈"/>
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/txtPassword"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSubmit"
            android:id="@+id/btnSubmit"/>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="horizontal"
                  android:isScrollContainer="true"
                  android:layout_marginTop="40dp">
        <Button
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:text="按钮1"/>
        <Button
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:text="按钮2"/>
        <Button
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:text="按钮3"/>
        <Button
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:text="按钮4"/>
        <Button
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:text="按钮5"/>
        <Button
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:text="按钮6"/>
        <Button
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:text="按钮7"/>
        <Button
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:text="按钮8"/>
        <Button
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:text="按钮9"/>
        <Button
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:text="按钮10"/>
    </LinearLayout>
</LinearLayout>